# smoother

./: CMakeLists.txt  README.md  package.xml  smoother_plugins.xml
include/smoother/: simple_smoother.hpp  smoother.hpp  smoother_utils.hpp
src/: simple_smoother.cpp
