<?xml version="1.0"?>
<package format="2">
  <name>smoother</name>
  <version>0.0.0</version>
  <description>The smoother package</description>
  <maintainer email="tannhat@todo.todo">tannhat</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>  
  
  <export>
    <smoother plugin="${prefix}/smoother_plugins.xml" />
  </export>
</package>
